# market_time_series_db

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
data_engine/: data_engine
data_engine/include/: commands.hpp  shared.hpp  storages.hpp
data_engine/src/: engine.cpp
data_engine/src/commands/: query_range.cpp  query_single.cpp
data_engine/src/storage/: file_manager.cpp  reader.cpp
docs/: dev-guide.md
include/: client.hpp  commands.hpp  models.hpp  shared.hpp  storage_models.hpp  storages.hpp  utils.hpp
src/: engine.cpp
src/client/: client.cpp  parser.cpp
src/commands/: insert_entry.cpp  insert_file.cpp  load_file.cpp  nuke_data.cpp  query_range.cpp  query_single.cpp
src/models/: order.cpp  order_book.cpp  storage_model.cpp
src/operations/: init.cpp  insert.cpp  query.cpp
src/share/: order_book_ops.cpp
src/shared/: ops.cpp  query_result.cpp
src/storage/: file_manager.cpp  index.cpp  reader.cpp  writer.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt
tests/helpers/: OrderDataBuilder.hpp  TempDirFixture.hpp
tests/integration/: test_insert_query.cpp  test_load_file.cpp  test_merge_state.cpp  test_multi_period.cpp
tests/unit/: test_file_manager.cpp  test_order_book.cpp  test_reader_writer.cpp  test_shared_ops.cpp  test_time_index.cpp
